implement signOut routes
